# modal-sudoku-solver

./: Makefile  README.md  example_request.py  main.py  pyproject.toml  solve.py  solver_demo.py
src/sudoku/: fastapi_models.py  main.py  solve.py
test/: test_edge_cases.py  test_example.py
test/fixtures/: examples.py
test/fixtures/examples/: SOURCE.txt
