[project]
name = "sudoku"
version = "0.1.0"
description = "Solves Sudoku puzzles on Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "highspy>=1.9.0",
    "modal>=0.73.108",
    "pydantic>=2.10.6",
    "pyomo>=6.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
